added a static food

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf8" />
     <title>Snake</title>
     <link rel="stylesheet" href="snake.css" />
     <script src="snake.js"></script>
