drawSnake and drawFood get positions only but game.status still expose snake and food object

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf8" />
     <title>Snake</title>
     <link rel="stylesheet" href="snake.css" />
-    <script src="snake.js"></script>
+    <script src="scripts/direction.js"></script>
+    <script src="scripts/snake.js"></script>
+    <script src="scripts/food.js"></script>
+    <script src="scripts/game.js"></script>
+    <script src="scripts/interfaceControls.js"></script>
   </head>
   <body onload="main()">
     <h1>Snake Game</h1>
