--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <script src="scripts/direction.js"></script>
     <script src="scripts/snake.js"></script>
     <script src="scripts/food.js"></script>
+    <script src="scripts/scorecard.js"></script>
     <script src="scripts/game.js"></script>
     <script src="scripts/interfaceControls.js"></script>
   </head>
   <body onload="main()">
     <h1>Snake Game</h1>
+    <div id="gameBox" class="scoreBox">
+      <p>Score:</p>
+      <p id="score">0</p>
+    </div>
     <div id="grid"></div>
+    <div id="gameOver" class="hide">Game Over</div>
   </body>
 </html>
